--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     font-family: "gilroy";
     box-sizing: border-box;
+    overflow: hidden;
 }
 
 html, body {
@@ -13,13 +14,17 @@ html, body {
 #main {
     width: 100%;
     height: 100vh;
-    background-color: black;
 }
 
 #back {
     width: 100%;
     height: 100vh;
-    background-color: black;
+}
+
+#back img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 #top {
@@ -29,7 +34,6 @@ html, body {
     left: 0;
     width: 100%;
     height: 100vh;
-    background-color: black;
 }
 
 #workarea {
@@ -62,7 +66,7 @@ html, body {
     pointer-events: all;
     text-decoration: none;
     text-transform: uppercase;
-    font-size: 12px;
+    font-size: 14px;
     font-weight: 600;
     color: #fff;
 }
@@ -82,21 +86,29 @@ html, body {
 }
 
 #heroleft .elem {
+    position: relative;
     height: 8vw;
     overflow: hidden;
 }
 
+#heroleft .elem h1:nth-child(1){
+    top: 0;
+}
+
 #heroleft .elem h1 {
-    line-height: 0.8;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    line-height: .85;
     font-family: "Kajiro";
     color: #fff;
     font-weight: 100;
-    font-size: 11vw;
+    font-size: 10vw;
 }
 
 #heroleft button {
     pointer-events: all;
-    padding: .8vw 3vw;
+    padding: .8vw 2vw;
     font-size: 3vw;
     margin-top: 2vw;
     font-family: "Kajiro";
